card-component-homework/src/App.css
* {
  padding: 0;
  margin: 0;
}

.nav {
  background-image: url("https://coolwallpapers.me/picsup/6013846-background-knowledge-wallpaper-book-mood-pages-book.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 0% 90%;
  height: 20vh;
}

.nav li {
  margin: 10px;
}

.nav ul {
  background: rgb(0, 0, 0);
  opacity: 0.9;
  display: flex;
  justify-content: flex-end;
  flex-direction: row;
  list-style: none;
  padding: 10px;
}

a {
  text-decoration: none;
  color: rgb(255, 255, 255);
  font-weight: bold;
}

.Card-component img {
  width: 300px;
  height: 500px;
}

